static_library("Analysis") {
  output_name = "clangAnalysis"
  configs += [ "//gn:clang_code" ]
  deps = [
    "//clang/lib/AST",
    "//clang/lib/Basic",
    "//clang/lib/Lex",
    "//llvm/lib/Support",
  ]
  sources = [
    "AnalysisDeclContext.cpp",
    "BodyFarm.cpp",
    "CFG.cpp",
    "CFGReachabilityAnalysis.cpp",
    "CFGStmtMap.cpp",
    "CallGraph.cpp",
    "CloneDetection.cpp",
    "CocoaConventions.cpp",
    "CodeInjector.cpp",
    "ConstructionContext.cpp",
    "Consumed.cpp",
    "Dominators.cpp",
    "FormatString.cpp",
    "LiveVariables.cpp",
    "OSLog.cpp",
    "ObjCNoReturn.cpp",
    "PostOrderCFGView.cpp",
    "PrintfFormatString.cpp",
    "ProgramPoint.cpp",
    "PseudoConstantAnalysis.cpp",
    "ReachableCode.cpp",
    "ScanfFormatString.cpp",
    "ThreadSafety.cpp",
    "ThreadSafetyCommon.cpp",
    "ThreadSafetyLogical.cpp",
    "ThreadSafetyTIL.cpp",
    "UninitializedValues.cpp",
  ]
}
