static_library("Lex") {
  output_name = "clangLex"
  configs += [ "//gn:clang_code" ]
  deps = [
    "//clang/lib/Basic",
    "//llvm/lib/Support",
  ]
  sources = [
    "HeaderMap.cpp",
    "HeaderSearch.cpp",
    "Lexer.cpp",
    "LiteralSupport.cpp",
    "MacroArgs.cpp",
    "MacroInfo.cpp",
    "ModuleMap.cpp",
    "PPCaching.cpp",
    "PPCallbacks.cpp",
    "PPConditionalDirectiveRecord.cpp",
    "PPDirectives.cpp",
    "PPExpressions.cpp",
    "PPLexerChange.cpp",
    "PPMacroExpansion.cpp",
    "PTHLexer.cpp",
    "Pragma.cpp",
    "PreprocessingRecord.cpp",
    "Preprocessor.cpp",
    "PreprocessorLexer.cpp",
    "ScratchBuffer.cpp",
    "TokenConcatenation.cpp",
    "TokenLexer.cpp",
  ]
}
