static_library("Rewrite") {
  output_name = "clangRewrite"
  configs += [ "//gn:clang_code" ]
  deps = [
    "//clang/lib/Basic",
    "//clang/lib/Lex",
    "//llvm/lib/Support",
  ]
  sources = [
    "DeltaTree.cpp",
    "HTMLRewrite.cpp",
    "RewriteRope.cpp",
    "Rewriter.cpp",
    "TokenRewriter.cpp",
  ]
}

