executable("BasicTests") {
  # test/Unit/lit.cfg expects unittests in CLANG_BINARY_DIR/unittest
  output_dir = target_out_dir

  configs += [ "//gn:clang_code" ]
  deps = [
    "//clang/lib/Basic",
    "//clang/lib/Lex",
    "//llvm/lib/Support",
    "//llvm/utils/unittest/UnitTestMain",
  ]
  sources = [
    "CharInfoTest.cpp",
    "DiagnosticTest.cpp",
    "FileManagerTest.cpp",
    "FixedPointTest.cpp",
    "MemoryBufferCacheTest.cpp",
    "SourceManagerTest.cpp",
    "VirtualFileSystemTest.cpp",
  ]
  testonly = true
}
